# lovegochi

./: README.md
.github/workflows/: server-docker-image.yml
.github/workflows/server/: docker-image.yml
Aseprite/: aseprite-build-script-macos.sh
Aseprite/Sprites/: Sprite-0001.aseprite
CercaApp/: EdugochiWidgetExtension.entitlements
CercaApp/CercaApp/: CercaAppApp.swift  ContentView.swift
CercaApp/CercaApp.xcodeproj/: project.pbxproj
CercaApp/CercaAppTests/: CercaAppTests.swift
CercaApp/CercaAppUITests/: CercaAppUITests.swift  CercaAppUITestsLaunchTests.swift
CercaApp/CercaAppWidget/: CercaAppWidget.swift  CercaAppWidgetBundle.swift
CercaApp/Edugochi/: ContentView.swift  Edugochi.entitlements  Edugochi.swift  LocationManager.swift
CercaApp/Edugochi.xcodeproj/: project.pbxproj
CercaApp/Edugochi/Assets.xcassets/AppIcon.appiconset/: Contents.json
CercaApp/Minimapa/: LocationManager.swift
IosApp/Minimapa/: Minimapa.swift  MinimapaBundle.swift
RasberryApp/: pyproject.toml
RasberryApp/src/: __init__.py  test.py
ios_app/Edugochi/: Data.swift  Edugochi.swift
ios_app/Edugochi.xcodeproj/xcshareddata/xcschemes/: Edugochi.xcscheme
rasberry_app/src/: gui.py  main.py
server/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  bun.lockb  docker-compose.yml  package.json
server/src/: db.ts  index.ts
server/src/api/: location.ts
server/src/lib/: bearer.ts  logger.ts
